# dotobjviewer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  camera.rs  main.rs  menu.rs  mesh.rs  performance.rs  renderer.rs  shaders.rs
src/shaders/: triangle.wgsl  wireframe.wgsl
