[package]
name = "dotobjviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
glam = "0.24"
pollster = "0.3"
tobj = "4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = "0.19"
winit = "0.29"
sysinfo = "0.30"
native-dialog = "0.7"
egui = "0.26"
egui-wgpu = "0.26"
egui-winit = "0.26"
